jobs/2026-05-05__17-28-28/typescript_async_transform__DiyCAkZ/verifier/test-stdout.txt
downloading uv 0.9.7 aarch64-unknown-linux-gnu
no checksums to verify
installing to /root/.local/bin
  uv
  uvx
everything's installed!

To add $HOME/.local/bin to your PATH, either restart your shell or run:

    source $HOME/.local/bin/env (sh, bash, zsh)
    source $HOME/.local/bin/env.fish (fish)
Downloading pygments (1.2MiB)
 Downloading pygments
Installed 7 packages in 13ms
============================= test session starts ==============================
platform linux -- Python 3.12.3, pytest-8.4.1, pluggy-1.6.0
rootdir: /tests
plugins: json-ctrf-0.3.5
collected 7 items

tests/test_final_state.py ..FFF..                                        [100%]

=================================== FAILURES ===================================
_____________________________ test_single_product ______________________________

    def test_single_product():
        """Priority 1: single product with 10% tax."""
>       r = _eval_enrich([{"id": 1, "name": "Widget", "price": 10}], 0.1)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

tests/test_final_state.py:37: 
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 

products = [{'id': 1, 'name': 'Widget', 'price': 10}], tax_rate = 0.1

    def _eval_enrich(products: list, tax_rate: float = 0.1) -> dict:
        with open(ENRICH_TS) as fh:
            src = fh.read()
        js = re.sub(r"Array<[^>]+>", "", src)
        js = re.sub(r":\s*(number|string|boolean)", "", js)
        js = js.replace("export async function", "async function")
        call = (
            f"main({json.dumps(products)}, {tax_rate})"
            f".then(r => console.log(JSON.stringify(r)));"
        )
        result = subprocess.run(["node", "-e", js + "\n" + call], capture_output=True, text=True, timeout=15)
>       assert result.returncode == 0, f"node failed: {result.stderr}"
E       AssertionError: node failed: [eval]:2
E           products: ,
E                   ^
E         Unexpected token `,`. Expected an identifier, void, yield, null, await, break, a string literal, a numeric literal, true, false, `, -, import, this, typeof, {, [, (
E         
E         SyntaxError: Unexpected token ':'
E             at makeContextifyScript (node:internal/vm:194:14)
E             at compileScript (node:internal/process/execution:388:10)
E             at evalTypeScript (node:internal/process/execution:260:22)
E             at node:internal/main/eval_string:71:3
E         
E         Node.js v24.15.0
E         
E       assert 1 == 0
E        +  where 1 = CompletedProcess(args=['node', '-e', 'async function main(\n  products: ,\n  tax_rate = 0.1\n) {\n  const enriched = a...TypeScript (node:internal/process/execution:260:22)\n    at node:internal/main/eval_string:71:3\n\nNode.js v24.15.0\n").returncode

tests/test_final_state.py:31: AssertionError
______________________________ test_two_products _______________________________

    def test_two_products():
        """Priority 1: two products, 20% tax."""
>       r = _eval_enrich([{"id": 1, "name": "A", "price": 100}, {"id": 2, "name": "B", "price": 200}], 0.2)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

tests/test_final_state.py:50: 
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 

products = [{'id': 1, 'name': 'A', 'price': 100}, {'id': 2, 'name': 'B', 'price': 200}]
tax_rate = 0.2

    def _eval_enrich(products: list, tax_rate: float = 0.1) -> dict:
        with open(ENRICH_TS) as fh:
            src = fh.read()
        js = re.sub(r"Array<[^>]+>", "", src)
        js = re.sub(r":\s*(number|string|boolean)", "", js)
        js = js.replace("export async function", "async function")
        call = (
            f"main({json.dumps(products)}, {tax_rate})"
            f".then(r => console.log(JSON.stringify(r)));"
        )
        result = subprocess.run(["node", "-e", js + "\n" + call], capture_output=True, text=True, timeout=15)
>       assert result.returncode == 0, f"node failed: {result.stderr}"
E       AssertionError: node failed: [eval]:2
E           products: ,
E                   ^
E         Unexpected token `,`. Expected an identifier, void, yield, null, await, break, a string literal, a numeric literal, true, false, `, -, import, this, typeof, {, [, (
E         
E         SyntaxError: Unexpected token ':'
E             at makeContextifyScript (node:internal/vm:194:14)
E             at compileScript (node:internal/process/execution:388:10)
E             at evalTypeScript (node:internal/process/execution:260:22)
E             at node:internal/main/eval_string:71:3
E         
E         Node.js v24.15.0
E         
E       assert 1 == 0
E        +  where 1 = CompletedProcess(args=['node', '-e', 'async function main(\n  products: ,\n  tax_rate = 0.1\n) {\n  const enriched = a...TypeScript (node:internal/process/execution:260:22)\n    at node:internal/main/eval_string:71:3\n\nNode.js v24.15.0\n").returncode

tests/test_final_state.py:31: AssertionError
_____________________________ test_empty_products ______________________________

    def test_empty_products():
        """Priority 1: empty input."""
>       r = _eval_enrich([])
            ^^^^^^^^^^^^^^^^

tests/test_final_state.py:59: 
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 

products = [], tax_rate = 0.1

    def _eval_enrich(products: list, tax_rate: float = 0.1) -> dict:
        with open(ENRICH_TS) as fh:
            src = fh.read()
        js = re.sub(r"Array<[^>]+>", "", src)
        js = re.sub(r":\s*(number|string|boolean)", "", js)
        js = js.replace("export async function", "async function")
        call = (
            f"main({json.dumps(products)}, {tax_rate})"
            f".then(r => console.log(JSON.stringify(r)));"
        )
        result = subprocess.run(["node", "-e", js + "\n" + call], capture_output=True, text=True, timeout=15)
>       assert result.returncode == 0, f"node failed: {result.stderr}"
E       AssertionError: node failed: [eval]:2
E           products: ,
E                   ^
E         Unexpected token `,`. Expected an identifier, void, yield, null, await, break, a string literal, a numeric literal, true, false, `, -, import, this, typeof, {, [, (
E         
E         SyntaxError: Unexpected token ':'
E             at makeContextifyScript (node:internal/vm:194:14)
E             at compileScript (node:internal/process/execution:388:10)
E             at evalTypeScript (node:internal/process/execution:260:22)
E             at node:internal/main/eval_string:71:3
E         
E         Node.js v24.15.0
E         
E       assert 1 == 0
E        +  where 1 = CompletedProcess(args=['node', '-e', 'async function main(\n  products: ,\n  tax_rate = 0.1\n) {\n  const enriched = a...TypeScript (node:internal/process/execution:260:22)\n    at node:internal/main/eval_string:71:3\n\nNode.js v24.15.0\n").returncode

tests/test_final_state.py:31: AssertionError
==================================== PASSES ====================================
=========================== short test summary info ============================
PASSED tests/test_final_state.py::test_enrich_ts_exists
PASSED tests/test_final_state.py::test_enrich_yaml_exists
PASSED tests/test_final_state.py::test_yaml_language
PASSED tests/test_final_state.py::test_yaml_summary
FAILED tests/test_final_state.py::test_single_product - AssertionError: node ...
FAILED tests/test_final_state.py::test_two_products - AssertionError: node fa...
FAILED tests/test_final_state.py::test_empty_products - AssertionError: node ...
========================= 3 failed, 4 passed in 0.13s ==========================
